--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/node": "^13.1.5",
     "@types/ramda": "^0.26.39",
+    "monet": "^0.9.0",
     "nodemark": "^0.3.0",
     "parcel": "^1.12.4",
     "ramda": "^0.26.1"
